--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "15.6.0",
+    "yarn": "1.22.10"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
